# KWICK

./: .gitignore  LICENSE  README.md
kirc/: CMakeCache.txt  CMakeLists.txt  Makefile  main.cpp
kirc/inc/: Expression.hpp  Function.hpp  Pass.hpp  Statement.hpp
kirc/inc/Pass/: LoweringPass.hpp
kirc/inc/Utils/: MemoryContext.hpp
kirc/lib/: Context.cpp  Type.cpp
kirc/src/: api.h  block.cpp  block.hpp  expr.cpp  expr.hpp  function.cpp  function.hpp  kir.hpp  module.hpp  objdef.hpp  statement.cpp  statement.hpp  symbol.cpp  symbol.hpp  type.cpp  type.hpp  utils.hpp  value.hpp
kwick/: Cargo.toml  README.md  TODO.md  TODO.mdown  build_parser.sh  run_parser.sh
kwick/parser/: Parse.hs  ParseDec.hs  ParseExpr.hs  ParseIdent.hs  ParseModule.hs  ParseQuoted.hs  ParseSpace.hs  ParseStat.hs  ParseStat.hs-boot  ParseType.hs  Precedence.hs  Syntax.hs  TestParser.hs  build.sh  main.hs  run.sh
kwirc/: CMakeCache.txt  CMakeLists.txt  KIRC  Makefile  cmake_install.cmake  main.cpp
kwirc/inc/: Block.hpp  Context.hpp  Expression.hpp  Function.hpp  Identifier.hpp  Statement.hpp  Type.hpp  Utils.hpp
kwirc/inc/Utils/: MemoryContext.hpp  Object.hpp
kwirc/lib/: Context.cpp  Expression.cpp  Function.cpp  Type.cpp
